# nex-rs

./: Cargo.toml  README.md
.github/workflows/: main.yml
macros/: Cargo.toml
macros/src/: lib.rs  nex_protocol.rs
macros/src/match_nex_route/: args.rs  macro_impl.rs
macros/src/nex_method/: args.rs  macro_impl.rs  method_signature.rs  mod.rs
macros/src/nex_protocol/: macro_impl.rs  mod.rs  protocol_idents.rs  protocol_method.rs  protocol_method_idents.rs
macros/src/nex_route/: macro_impl.rs
macros/src/utils/: enum_variant.rs
macros/tests/: nex_method.rs  nex_protocol.rs
nex-protocols-rs/: Cargo.toml
nex-protocols-rs/src/: lib.rs  ticket_granting.rs
nex-protocols-rs/src/datastore_usum/: protocol.rs  types.rs
nex-protocols-rs/src/health/: protocol.rs
nex-protocols-rs/src/matchmake_extension/: protocol.rs  types.rs
nex-protocols-rs/src/monitoring/: protocol.rs
nex-protocols-rs/src/secure_connection/: mod.rs  protocol.rs  types.rs
nex-protocols-rs/src/ticket_granting/: mod.rs  protocol.rs  types.rs
nex-protocols-rs/src/usum_117/: protocol.rs
nex-protocols-rs/src/utility/: protocol.rs
nex-rs/: Cargo.toml
nex-rs/src/: client.rs  compression.rs  counter.rs  kerberos.rs  lib.rs  rc4.rs  result.rs  server.rs
nex-rs/src/client/: connection.rs  context.rs  mod.rs  result.rs
nex-rs/src/crypt/: kerberos.rs  mod.rs  rc4.rs  result.rs
nex-rs/src/crypto/: kerberos.rs  mod.rs
nex-rs/src/nex_types/: date_time.rs  empty.rs  mod.rs  nex_buffer.rs  nex_map.rs  nex_qbuffer.rs  nex_string.rs  nex_struct.rs  null_data.rs  result_code.rs  station_url.rs
nex-rs/src/packet/: base.rs  mod.rs  packet_option.rs  packet_type.rs  result.rs  signature_context.rs  v1.rs
nex-rs/src/packet/v1/: header.rs  mod.rs  options.rs  packet.rs
nex-rs/src/result/: empty_error.rs  error.rs  mod.rs  nex_error.rs
nex-rs/src/rmc/: mod.rs  rmc_request.rs
nex-rs/src/route/: mod.rs  nex_protocol.rs  route_trait.rs
nex-rs/src/server/: base.rs  event_handler.rs  mod.rs  result.rs  server_trait.rs  settings.rs
src/: client.rs  compression.rs  counter.rs  kerberos.rs  lib.rs  md5.rs  nex_types.rs  rc4.rs  rmc_request.rs  server.rs  stream_in.rs
src/nex_types/: data_holder.rs  date_time.rs  mod.rs  nex_buffer.rs  nex_list.rs  nex_map.rs  nex_qbuffer.rs  nex_string.rs  nex_struct.rs  nex_variant.rs  null_data.rs  result_code.rs  result_range.rs  rv_connection_data.rs
src/packet/: base.rs  mod.rs  packet_flag.rs  packet_option.rs  packet_type.rs  v1.rs
src/rmc/: mod.rs  rmc_request.rs  rmc_response.rs
src/stream/: mod.rs  stream_in.rs  stream_out.rs
