[package]
name = "nex-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
mocktopus = "0.7.11"

[dependencies]
async-trait = "0.1.52"
getset = "0.1.2"
hmac = "0.12.1"
md-5 = "0.10.1"
miniz_oxide = "0.5.1"
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "fb1d06e" }
num_enum = { version = "0.5", default-features = false }
rand = "0.8.5"
rust-crypto = "0.2.36"
safe-transmute = { version = "0.11", default-features = false }
time = "0.3.9"
tokio = { version = "1", features = ["full"] }
