[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
heck = "0.4.0"

[dev-dependencies]
async-trait = "0.1.52"
nex-protocols-rs = { path = "../nex-protocols-rs" }
nex-rs = { path = "../nex-rs" }
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "4a9ca86" }
num_enum = { version = "0.5", default-features = false }
tokio = { version = "1", features = ["full"] }
